# pdf-search

./: Dockerfile  Makefile  docker-compose-test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/static/: index.html
app/static/components/: pdf-uploader.js  pdf-viewer.js
tests/: test_main.py
