[tool.poetry]
name = "pdf-search"
version = "0.1.0"
description = "PDF search service with FastAPI and PostgreSQL"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
PyPDF2 = "^3.0.1"
sqlalchemy = "^2.0.36"
httpx = "^0.28.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
isort = "^5.12.0"
reportlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
